# Capstone-Project

./: DEMO_SCRIPT.txt  GEMINI.md  Makefile  README.md  SUBMISSION_WRITEUP.md  agents-cli-manifest.yaml  copy_images.py  pyproject.toml
aquaguard_agent/: agent.py  agent_runtime_app.py  eval_set_1.evalset.json  mcp_server.py
aquaguard_agent/app_utils/: __init__.py  telemetry.py  typing.py
