[project]
name = "aquaguard-agent"
version = "0.1.0"
description = "AquaGuard environmental health water reporting agent"
authors = [
    {name = "Your Name", email = "your@email.com"},
]
dependencies = [
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "mcp>=1.0.0,<2.0.0",
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.29,<1.0",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "google-cloud-aiplatform[evaluation,agent-engines]>=1.156.0",
    "protobuf>=6.31.1,<7.0.0",
]
requires-python = ">=3.11,<3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
